@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright 2009 Brian Pellin.
+ Copyright 2009-2014 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -20,23 +20,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
-  android:gravity="center_vertical"
-  android:padding="2sp"
-  style="@style/WhiteOnBlack">
-	<TextView android:id="@+id/group_name" 
-	  android:layout_width="wrap_content"
-	  android:layout_height="wrap_content"
-	  android:layout_gravity="left|center_vertical"
-	  android:layout_weight="1"
-	  android:text="@string/root"
-  	  style="@style/WhiteOnBlack"
-	/>
-	<ImageView android:id="@+id/icon"
-	  android:layout_width="wrap_content"
-	  android:layout_height="wrap_content"
-	  android:layout_gravity="right|center_vertical"
-	  android:scaleType="fitXY"
-	  android:src="@drawable/ic99_blank"
-	  style="@style/WhiteOnBlack"
-	/>
+  android:orientation="vertical">
+    <TextView android:id="@+id/read_only" 
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="Read-only"
+      android:visibility="gone"
+      style="@style/DarkOnBlackSmall"
+    />
+    <LinearLayout 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:padding="2sp"
+        style="@style/WhiteOnBlack">
+            <TextView android:id="@+id/group_name" 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_weight="1"
+                android:text="@string/root"
+                style="@style/WhiteOnBlack"
+            />
+            <ImageView android:id="@+id/icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic99_blank"
+                style="@style/WhiteOnBlack"
+            />
+    </LinearLayout>
 </LinearLayout>
