@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2013 Brian Pellin.
+ Copyright 2009-2014 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -156,6 +156,8 @@
     <string name="progress_create">Creating new database&#8230;</string>
     <string name="progress_title">Working&#8230;</string>
     <string name="protection">Protection</string>
+    <string name="read_only_warning">KeePassDroid does not have permission to write to the database location, so your database will be opened read-only.</string>
+    <string name="read_only_kitkat_warning">Starting with Android KitKat, some devices no longer allow applications to write to the sdcard.</string>
     <string name="recentfile_title">Recent file history</string>
     <string name="recentfile_summary">Remember recently used file names</string>
     <string name="remember_keyfile_summary">Remembers the location of keyfiles</string>
