@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2013 Brian Pellin.
+ Copyright 2009-2014 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -54,6 +54,9 @@
 	</style>
 	<style name="WhiteOnBlackSmall" parent="WhiteOnBlack">
 		<item name="@android:textSize">12sp</item>
+	</style>
+	<style name="DarkOnBlackSmall" parent="WhiteOnBlackSmall">
+		<item name="@android:textColor">@android:color/secondary_text_dark</item>
 	</style>
 	<style name="WhiteOnDarkSmall" parent="WhiteOnBlack">
 		<item name="@android:textSize">12sp</item>
