@@ -1,5 +1,5 @@
 /*
- * Copyright 2013-2014 Brian Pellin.
+ * Copyright 2014 Brian Pellin.
  *     
  * This file is part of KeePassDroid.
  *
@@ -22,10 +22,17 @@ package com.keepassdroid.dialog;
 import android.content.Context;
 
 import com.android.keepass.R;
+import com.keepassdroid.compat.BuildCompat;
 
-public class BetaWarningDialog extends WarningDialog {
-
-	public BetaWarningDialog(Context context) {
-		super(context, R.string.beta_warning, R.string.show_beta_warning);
+public class ReadOnlyDialog extends WarningDialog {
+	
+	public ReadOnlyDialog(Context context) {
+		super(context, R.string.show_read_only_warning);
+		
+		warning = context.getString(R.string.read_only_warning);
+		
+		if (BuildCompat.getSdkVersion() >= BuildCompat.VERSION_KITKAT) {
+			warning = warning.concat("\n\n").concat(context.getString(R.string.read_only_kitkat_warning));
+		}
 	}
 }
