@@ -1,5 +1,5 @@
 /*
- * Copyright 2009-2011 Brian Pellin.
+ * Copyright 2009-2014 Brian Pellin.
  *     
  * This file is part of KeePassDroid.
  *
@@ -22,9 +22,11 @@ package com.keepassdroid.view;
 import android.content.Context;
 import android.util.AttributeSet;
 import android.view.LayoutInflater;
+import android.view.View;
 import android.widget.RelativeLayout;
 
 import com.android.keepass.R;
+import com.keepassdroid.app.App;
 
 public class GroupHeaderView extends RelativeLayout {
 
@@ -41,6 +43,11 @@ public class GroupHeaderView extends RelativeLayout {
 	private void inflate(Context context) {
 		LayoutInflater inflater = (LayoutInflater) context.getSystemService(Context.LAYOUT_INFLATER_SERVICE);
 		inflater.inflate(R.layout.group_header, this);
+		
+		if (App.getDB().readOnly) {
+			View readOnlyIndicator = findViewById(R.id.read_only);
+			readOnlyIndicator.setVisibility(VISIBLE);
+		}
 		
 	}
 
