@@ -4,6 +4,7 @@
  * Add Basque translations from dgarciabad
  * Polish transalation fix
  * Responsiveness improvements
+ * Better support for read-only database files
 
 
 KeePassDroid (1.99.10)
